--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>URL Shortner</title>
+    <title>URL Simplified</title>
   </head>
   
   <body>
     <div class="container">
       <i class="bx bx-link-alt"></i>
-      <h1>URL Shortner</h1>
+      <h1>URL Simplified</h1>
       <label for="originalUrl">Enter URL To Shorten :</label>
       <input type="text" id="originalUrl" placeholder="https://example.com" />
       <div class="buttons">
         <button id="reload-btn">Reload</button>
         <button id="short-btn">Create</button>
       </div>
-      <label for="shortenedUrl">Shortened URL :</label>
+      <label for="shortenedUrl">Personalized URL :</label>
       <textarea id="shortenedUrl" rows="3" readonly></textarea>
     </div>
 
